# conformance

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  publish.yml
adapters/: README.md
adapters/SendspinKit/client/: Package.resolved  Package.swift
adapters/SendspinKit/client/Sources/ConformanceSendspinKitClient/: main.swift
adapters/sendspin-cpp/client/: CMakeLists.txt  main.cpp
adapters/sendspin-dotnet/client/: Conformance.SendspinDotnet.Client.csproj  Program.cs
adapters/sendspin-go/: go.mod  go.sum
adapters/sendspin-go/client/: main.go
adapters/sendspin-go/internal/conformance/: common.go  scenarios.go
adapters/sendspin-go/server/: main.go
adapters/sendspin-js/: client.mjs  package.json  sdk-loader.mjs  server.mjs
adapters/sendspin-rs/client/: Cargo.toml
adapters/sendspin-rs/client/src/: main.rs
scripts/: detect_regressions.py  merge_results.py  run_all.py  setup_repositories.py  setup_workspace.py
src/conformance/: __init__.py  build.py  cli.py  environment.py  expected_state.py  fixtures.py  flac.py  implementations.py  io.py  merge.py  models.py  paths.py  pcm.py  process.py  registry.py  repository_versions.py  runner.py  scenarios.py  site.py  toolchains.py
src/conformance/adapters/: __init__.py  aiosendspin_client.py  aiosendspin_server.py  placeholder.py
src/sendspin_conformance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tmp/: server-ready.json  server-summary.json
