[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sendspin-conformance"
version = "0.1.0"
description = "Capability-aware conformance harness for Sendspin implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "av>=13.1.0",
]

[project.scripts]
conformance = "conformance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
