[package]
name = "conformance-sendspin-rs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
sendspin = { path = "../../../repos/sendspin-rs" }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
